# confluence-vector-indexer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
confluence_vector_sync/: attachment_loader.py  azure_ai_search.py  azure_cognitive_search.py  azure_document_intelligence.py  config.py  confluence.py  gpt_vision.py  otel.py  search.py  sync.py
tests/: test_confluence_integration.py
