[tool.poetry]
name = "confluence-vector-sync"
version = "0.1.0"
description = "Sync confluence to vector database"
authors = ["PJ"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
atlassian-python-api = "^3.41.3"
python-dotenv = "^1.0.0"
azure-search-documents = "^11.4.0"
azure-identity = "^1.14.1"
python-dateutil = "^2.8.2"
langchain_openai = "0.1.3"
langchain_core = "0.1.45"
langchain = "0.1.16"
openai = ">=1.0.0"
beautifulsoup4 = "^4.12.2"
tiktoken = "^0.6.0"
pytest = "^7.4.3"
azure-core-tracing-opentelemetry = "^1.0.0b11"
opentelemetry-instrumentation-requests = "^0.42b0"
azure-monitor-opentelemetry = "^1.0.0"
azure-ai-documentintelligence = "^1.0.0b1"
markdownify="^0.12.1"



[tool.poetry.scripts]
sync = "confluence_vector_sync.sync:sync"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
